# Backupper

./: README.md  index.html  package-lock.json  package.json  playwright.config.js  vitest.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  errors.rs  git_backup.rs  lib.rs  main.rs  restic.rs  updater.rs
src-tauri/tests/: restic_integration.rs
src/components/: Header.tsx  ThemeToggle.tsx
src/components/common/: UpdaterModal.tsx
src/components/ui/: button.tsx  dialog.tsx  progress.tsx
src/components/views/: GitRestoreView.tsx  GitSetupView.tsx  GitTargetView.tsx  HomeView.tsx  ImportView.tsx  ReplicateView.tsx  RepoView.tsx  RestoreView.tsx  SetupView.tsx
src/css/: tailwind.css
src/i18n/: en.ts  fr.ts  index.tsx  translate.ts
src/lib/: api.ts  format.ts
tests/e2e/: backup-flows.spec.js  tauri-mock.js
tests/unit/: format.test.js  i18n.test.js
