[package]
name = "backupper"
version = "0.1.0"
description = "Simple restic-backed backup app"
authors = ["Arnaud BEUX (Nytuo)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backupper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
keyring-core = "1.0.0"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4"] }
tokio = { version = "1.52.3", features = ["process", "io-util", "macros", "rt-multi-thread"] }
tempfile = "3.27.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
zbus-secret-service-keyring-store = "1.0.0"
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

